--- a/package.json
+++ b/package.json
@@ -30,5 +30,7 @@
         "webpack-cli": "^4.3.1",
         "webpack-dev-server": "^3.11.1"
     },
-    "dependencies": {}
+    "dependencies": {
+        "swiper": "^7.0.7"
+    }
 }
